test/syntax/fail/too_few_args.sync
let node f x y = x

let node g x = f x
